# aws-cost-guard

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  tsconfig.json
.github/instructions/: aws-cost-guard.instructions.md
.github/workflows/: daily-report.yml
src/: anomaly-engine.ts  anomaly_engine.py  aws-client.ts  aws_client.py  formatter.py  formatter.ts  index.ts  main.py  mock-test.ts  mock_test.py  models.py  notifier.py  notifier.ts  types.ts
terraform/: iam-policy.tf  oidc.tf  terraform.tfvars  versions.tf
tests/: conftest.py  test_anomaly_engine.py  test_aws_client.py  test_formatter.py  test_main.py  test_notifier.py
